# dbus-pure

./: Cargo.toml  Makefile  README.md
dbus-pure-macros/: Cargo.toml  README.md
dbus-pure-macros/src/: as_variant.rs  interface.rs  lib.rs  object.rs  to_variant.rs
dbus-pure-proto/: Cargo.toml  README.md
dbus-pure-proto/src/: as_variant.rs  de.rs  lib.rs  message.rs  ser.rs  std2.rs  to_variant.rs  variant.rs  variant_deserializer.rs
examples/: mpris_pause_on_lockscreen.rs  mpris_playback_status.rs
src/: client.rs  conn.rs  de.rs  lib.rs  ser.rs  std2.rs
src/types/: message.rs  mod.rs  variant.rs  variant_deserializer.rs
