[package]
name = "dbus-pure"
version = "0.1.0"
license = "Apache-2.0 OR GPL-2.0-only"
authors = ["Arnavion <arnavion@gmail.com>"]
edition = "2018"

[dependencies]
dbus-pure-macros = { version = "0.1", path = "./dbus-pure-macros" }
dbus-pure-proto = { version = "0.1", path = "./dbus-pure-proto" }
libc = "0.2"
percent-encoding = "2"
serde = "1"

[workspace]
members = [
	"dbus-pure-macros",
	"dbus-pure-proto",
]
resolver = "2"
