[package]
name = "dbus-pure"
version = "0.1.0"
license = "Apache-2.0 OR GPL-2.0-only"
authors = ["Arnav Singh <me@arnavion.dev>"]
edition = "2024"

[dependencies]
dbus-pure-macros = { version = "0.1", path = "./dbus-pure-macros" }
dbus-pure-proto = { version = "0.1", path = "./dbus-pure-proto" }
libc = { version = "0.2", default-features = false }
percent-encoding = { version = "2", default-features = false, features = [
	"alloc", # PercentDecode::decode_utf8
] }
serde = { version = "1.0.70", default-features = false }

[workspace]
members = [
	"dbus-pure-macros",
	"dbus-pure-proto",
]
