[package]
name = "dbus-pure-macros"
version = "0.1.0"
authors = ["Arnavion <me@arnavion.dev>"]
edition = "2021"

[dependencies]
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
syn = { version = "2", default-features = false, features = [
	"derive", # syn::Data
	"full",
	"parsing", # syn::parse fn and syn::parse module
	"printing", # quote::ToTokens impls
	"proc-macro", # syn::parse fn
] }

[dev-dependencies]
dbus-pure = { path = "../" }
dbus-pure-proto = { path = "../dbus-pure-proto/" }
serde = { version = "1", features = [
	"derive",
] }

[lib]
proc-macro = true
