[package]
name = "dbus-pure-proto"
version = "0.1.0"
license = "Apache-2.0 OR GPL-2.0-only"
authors = ["Arnavion <arnavion@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1", default-features = false, features = [
	"alloc", # {Vec<T>,String}: Deserialize
] }

[dev-dependencies]
serde_derive = "1"
